--- a/test-variables.yml.example
+++ b/test-variables.yml.example
@@ -1,5 +1,5 @@
 BROWSER:
-  NAME: headlesschrome
+  NAME: chrome
   # List of Chrome options - https://peter.sh/experiments/chromium-command-line-switches/
   # --disable-dev-shm-usage  and --no-sandbox are required for running chromedriver in a container
   OPTIONS: add_argument("--ignore-certificate-errors");add_argument("window-size=1920,1024");add_argument("--disable-dev-shm-usage");add_argument("--no-sandbox")
@@ -17,38 +17,3 @@ OCP_ADMIN_USER:
   AUTH_TYPE: "kube:admin"
   USERNAME: kubeadmin
   PASSWORD: abc123XYZ!
-TEST_USER_2:
-  AUTH_TYPE: foo-auth
-  USERNAME: foo-user2
-  PASSWORD: foo-passwd2
-TEST_USER_3:
-  AUTH_TYPE: foo-auth
-  USERNAME: foo-user3
-  PASSWORD: foo-passwd3
-TEST_USER_4:
-  AUTH_TYPE: foo-auth
-  USERNAME: foo-user4
-  PASSWORD: foo-passwd4
-SERVICE_ACCOUNT:
-  NAME: <sa_name>
-  FULL_NAME: <sa_full_name>
-  # FULL_NAME in the format of "system:serviceaccount:<namespace>:<sa_name>"
-S3:
-  AWS_ACCESS_KEY_ID: ID-value
-  AWS_SECRET_ACCESS_KEY: Secret-Key
-ANACONDA_CE:
-  ACTIVATION_KEY: license-key
-SSO:
-  USERNAME: rh-sso-account
-  PASSWORD: rh-sso-account-pw
-RHOSAK_CONFIG_TEST:
-  STREAM_REGION: stream-aws-region
-  CLOUD_PROVIDER: stream-cloud-provider
-  STREAM_NAME: stream-test-name
-  SERVICE_ACCOUNT: stream-test-sa
-  TOPIC_NAME: stream-test-topic
-  CONSUMER_GROUP: stream-test-cg
-GITHUB_USER:
-  USERNAME: USER
-  EMAIL: email@gmail.com
-  TOKEN: token
